[project]
name = "kk_scene_wrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "AX-MMD",email = "ax.mmd.yt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
package-mode = false
dependencies = []


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = ["E203", "F811", "E501", "E266"]
